Improve class structure